--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>whre.ai | Organization Evolved</title>
+        <title>wher.ai | Organization Evolved</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <img src="/assets/img/logo.png" class="logo" />    
 
-                    <h1 class="fst-italic lh-1 mb-4">Organization Evolved</h1>
+                    <h1 class="fst-italic lh-1 mb-4">Organization Reimagined</h1>
                     <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
