Updates and video update

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </head>
     <body>
         <!-- Background Video-->
-        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="assets/mp4/pack.mp4" type="video/mp4" /></video>
+        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="assets/mp4/geo.mp4" type="video/mp4" /></video>
         <!-- Masthead-->
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <img src="/assets/img/logo.png" class="logo" />    
 
-                    <h1 class="fst-italic lh-1 mb-4">Organization Reimagined</h1>
-                    <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
+                    <h1 class="fst-italic lh-1 mb-4">Take Control of Your Space, One Item at a Time</h1>
+                    <p class="mb-5">We're on a mission to redefine how you stay organized and manage your stuff in your life. Our innovative app is coming soon. Sign up below to receive updates and be the first to experience it</p>
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
                     <!-- * * * * * * * * * * * * * * *-->
