--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>wher.ai | Organization Evolved</title>
+        <title>wher.ai | From Clutter to Clarity</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,14 +25,16 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <img src="/assets/img/logo.png" class="logo" />    
 
-                    <h1 class="fst-italic lh-1 mb-4">From Clutter to Clarity</h1>
-                    <p class="mb-5">We're on a mission to redefine how you stay organized and manage your stuff in your life. Sign up below to receive updates and be the first to experience it</p>
+                    <h1 class="fst-italic lh-2 mb-4">From Clutter to Clarity</h1>
+                    <p class="mb-5">We're on a mission to redefine how you stay organized and manage your stuff in your life. Sign up and be the first to experience it!</p>
                    
                     <div class="container px-5 my-5">
                         <div id="mc_embed_shell">
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
                         <style type="text/css">
-                              #mc_embed_signup{background:#ccc; clear:left; font:14px Helvetica,Arial,sans-serif;text-align: left;}
+                              #mc_embed_signup{background:rgba(255,255,255,0.1);color:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;text-align: left;border-radius: 1em;}
+                              label{color:#fff;}
+                              .indicates-required {color:#f6f6f6}
                               /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
                                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                       </style>
@@ -73,7 +75,7 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark m-3" href="https://x.com/aiwher"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-instagram"></i></a>
             </div>
