Email Box Sizing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div id="mc_embed_shell">
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
                         <style type="text/css">
-                              #mc_embed_signup{background:rgba(255,255,255,0.1);color:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;text-align: left;border-radius: 1em;}
+                              #mc_embed_signup{background:rgba(255,255,255,0.1);color:#fff; clear:left;min-width: 350px; font:14px Helvetica,Arial,sans-serif;text-align: left;border-radius: 1em;}
                               label{color:#fff;}
                               .indicates-required {color:#f6f6f6}
                               /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
