--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <!-- Masthead-->
         <div class="masthead">
             <div class="masthead-content text-white">
-                <div class="container-fluid px-4 px-lg-0">
+                <div class="container-fluid">
                     <img src="/assets/img/logo.png" class="logo" />    
 
-                    <h1 class="fst-italic lh-2 mb-4">From Clutter to Clarity</h1>
+                    <h1 class="fst-italic lh-2 ">From Clutter to Clarity</h1>
                     <p class="mb-5">We're on a mission to redefine how you stay organized and manage your stuff in your life. Sign up and be the first to experience it!</p>
                    
-                    <div class="container px-5 my-5">
+                    <div class="container">
                         <div id="mc_embed_shell">
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
                         <style type="text/css">
-                              #mc_embed_signup{background:rgba(255,255,255,0.1);color:#fff; clear:left;min-width: 350px; font:14px Helvetica,Arial,sans-serif;text-align: left;border-radius: 1em;}
+                              #mc_embed_signup{margin:0; padding:0; background:rgba(255,255,255,0.1);color:#fff; clear:left;width:80vw;  min-width: 320px;max-width:500px; font:14px ;text-align: left;border-radius: 1em;}
                               label{color:#fff;}
                               .indicates-required {color:#f6f6f6}
                               /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
