--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img src="/assets/img/logo.png" class="logo" />    
 
                     <h1 class="fst-italic lh-2">Revolutionizing the Way You Organize</h1>
-                    <p class="mb-5">We're on a mission to redefine how you stay organized and manage your stuff in your life. Sign up and be the first to experience it!</p>
+                    <p class="mb-5">We're on a mission to redefine how you stay organized and manage the stuff in your life. Sign up and be the first to experience it!</p>
                    
                     <div class="container">
                         <div id="mc_embed_shell">
