--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="author" content="wher.ai and Seavista" />
         <title>wher.ai | Revolutionizing the Way You Organize</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -75,9 +75,11 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
+                <a class="btn btn-dark m-3" href="https://www.youtube.com/@WHERAI"><i class="fab fa-youtube"></i></a>
                 <a class="btn btn-dark m-3" href="https://x.com/aiwher"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.facebook.com/wherai"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.instagram.com/getwherai/"><i class="fab fa-instagram"></i></a>
+
             </div>
         </div>
         <!-- Bootstrap core JS-->
