--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-light m-3" href="https://www.youtube.com/@WHERAI"><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-light m-3" href="https://x.com/aiwher"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light m-3" href="https://www.facebook.com/wherai"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light m-3" href="https://www.instagram.com/getwherai/"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.youtube.com/@WHERAI"><i class="fab fa-youtube text-white"></i></a>
+                <a class="btn btn-dark m-3" href="https://x.com/aiwher"><i class="fab fa-twitter text-white"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.facebook.com/wherai"><i class="fab fa-facebook-f text-white"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.instagram.com/getwherai/"><i class="fab fa-instagram text-white"></i></a>
             </div>
         </div>
         <!-- Bootstrap core JS-->
