--- a/index.html
+++ b/index.html
@@ -82,6 +82,27 @@
                 </div>
             </div>
         </div>
+        <!-- About Section -->
+        <section id="about" class="about-section">
+            <div class="container">
+                <h2>About Us</h2>
+                <p>Learn more about our mission and values.</p>
+            </div>
+        </section>
+        <!-- Features Section -->
+        <section id="features" class="features-section">
+            <div class="container">
+                <h2>Features</h2>
+                <p>Discover the amazing features we offer.</p>
+            </div>
+        </section>
+        <!-- Contact Section -->
+        <section id="contact" class="contact-section">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <p>Get in touch with us for more information.</p>
+            </div>
+        </section>
         <!-- Social Icons-->
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
@@ -96,6 +117,29 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- JavaScript for animations and parallax effects -->
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                // IntersectionObserver for scroll animations
+                let observer = new IntersectionObserver((entries, observer) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            entry.target.classList.add('animate');
+                            observer.unobserve(entry.target);
+                        }
+                    });
+                }, { threshold: 0.1 });
 
+                document.querySelectorAll('.about-section, .features-section, .contact-section').forEach(section => {
+                    observer.observe(section);
+                });
+
+                // Parallax effect
+                window.addEventListener('scroll', function() {
+                    let scrolled = window.pageYOffset;
+                    document.querySelector('.bg-video').style.transform = 'translateY(' + (scrolled * 0.5) + 'px)';
+                });
+            });
+        </script>
     </body>
 </html>
