Fix icons on bottom navigation and movie animated background
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/seavista/wher.github.io?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
         <section id="about" class="about-section">
             <div class="container">
                 <h2>About Us</h2>
-                <p>Learn more about our mission and values.</p>
+                <p>Learn more about our mission and values. We are dedicated to providing innovative solutions to help you stay organized and manage your belongings efficiently. Our team is passionate about making your life easier and more organized.</p>
             </div>
         </section>
         <!-- Features Section -->
         <section id="features" class="features-section">
             <div class="container">
                 <h2>Features</h2>
-                <p>Discover the amazing features we offer.</p>
+                <p>Discover the amazing features we offer. Our platform includes advanced search capabilities, easy categorization, and seamless integration with your devices. Stay on top of your organization game with our user-friendly interface and powerful tools.</p>
             </div>
         </section>
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <div class="container">
                 <h2>Contact Us</h2>
-                <p>Get in touch with us for more information.</p>
+                <p>Get in touch with us for more information. We are here to answer any questions you may have and provide support. Reach out to us via email, phone, or social media. We look forward to hearing from you!</p>
             </div>
         </section>
         <!-- Social Icons-->
